# rust-lib

./: Cargo.toml  PUBLISHING.adoc  README.adoc  README.fa.adoc  codecov.yml  renovate.json
.github/workflows/: ci.yml  coverage.yml  crate-iran-pay.yml  crate-jalali-calendar.yml  crate-parsitext.yml  renovate.yml
crates/iran-pay/: Cargo.toml  README.adoc  VERSIONING.md
crates/iran-pay/benches/: pipeline.rs  security.rs
crates/iran-pay/examples/: mock_in_test.rs  multi_gateway.rs  with_validators.rs  zarinpal_basic.rs
crates/iran-pay/src/: amount.rs  error.rs  gateway.rs  lib.rs  mock.rs  security.rs  types.rs  validators.rs
crates/iran-pay/src/providers/: idpay.rs  mod.rs  nextpay.rs  payir.rs  vandar.rs  zarinpal.rs  zibal.rs
crates/iran-pay/tests/: integration.rs  security.rs
crates/jalali/: Cargo.toml  README.adoc
crates/jalali-calendar/: Cargo.toml  README.adoc
crates/jalali-calendar/benches/: conversion.rs  format.rs
crates/jalali-calendar/examples/: basic_conversion.rs  date_arithmetic.rs  parse_persian_input.rs  unix_timestamp.rs
crates/jalali-calendar/src/: chrono_impl.rs  lib.rs  parse.rs  today.rs  zoned.rs
crates/jalali-calendar/tests/: integration.rs
crates/jalali/benches/: conversion.rs  format.rs
crates/jalali/examples/: basic_conversion.rs  date_arithmetic.rs  parse_persian_input.rs  unix_timestamp.rs
crates/jalali/src/: algorithm.rs  chrono_impl.rs  datetime.rs  digits.rs  format.rs  lib.rs  season.rs  serde_impl.rs  unix.rs  zoned.rs
crates/jalali/tests/: integration.rs
crates/parsitext/: Cargo.toml  README.adoc
crates/parsitext/benches/: normalizer.rs  pipeline.rs
crates/parsitext/data/: corrections.json  slang.json
crates/parsitext/examples/: basic_normalize.rs  batch_processing.rs  custom_rules.rs  entity_detection.rs  finglish_chat.rs  showcase.rs  validators.rs
crates/parsitext/src/: config.rs  data.rs  diacritics.rs  engine.rs  finglish.rs  geo.rs  jalali.rs  lib.rs  money.rs  phonetic.rs  script.rs  sentence.rs  spell.rs  spell_dict.rs  stats.rs  stemmer.rs  style.rs  tantivy_analyzer.rs  time_diff.rs  transliterate.rs  url_fix.rs  zwnj_insert.rs
crates/parsitext/src/entity/: mod.rs
crates/parsitext/src/finglish/: dict.rs
crates/parsitext/src/normalizer/: digits.rs  mod.rs  orthography.rs  spacing.rs  zwnj.rs
crates/parsitext/src/numbers/: from_words.rs  mod.rs  to_words.rs
crates/parsitext/src/tokenizer/: mod.rs
crates/parsitext/src/validators/: bank_card.rs  banks.rs  bill.rs  car_plate.rs  landline.rs  legal_id.rs  mod.rs  national_id.rs  phone.rs  postal_code.rs  sheba.rs
crates/parsitext/tests/: integration.rs
