[package]
name = "iran-pay"
description = "Unified async SDK for Iranian payment gateways — ZarinPal, IDPay, NextPay, Pay.ir behind one strongly-typed Rust trait."
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/obsernetics/rust-lib"
documentation = "https://docs.rs/iran-pay"
readme = "README.adoc"
include = ["src/**/*", "Cargo.toml", "README.adoc", "VERSIONING.md", "LICENSE*"]
keywords = ["payment", "iran", "zarinpal", "idpay", "gateway"]
categories = ["api-bindings", "web-programming::http-client"]
rust-version = "1.88"
exclude = ["target/**/*"]

[features]
default = ["zarinpal", "idpay", "nextpay", "payir", "zibal", "vandar", "rustls-tls", "validators"]

# Per-gateway opt-out (each driver lives behind its own feature).
zarinpal = []
idpay = []
nextpay = []
payir = []
zibal = []
vandar = []

# Re-export parsitext's Iranian validators (national ID, IBAN, bank card,
# phone, postal code, car plate) — `iranianbank`-style coverage.
validators = ["dep:parsitext"]

# TLS backend selection (mutually exclusive in practice).
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
async-trait = "0.1"
parsitext = { version = "0.1", path = "../parsitext", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
serde_json = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "security"
harness = false

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
