[package]
name = "jalali-calendar"
description = "Comprehensive Jalali (Persian / Shamsi) calendar: dates, datetimes, timezones, strftime, parsing, arithmetic, and digit utilities."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/obsernetics/rust-lib"
documentation = "https://docs.rs/jalali-calendar"
readme = "README.adoc"
keywords = ["jalali", "persian", "shamsi", "calendar", "date"]
categories = ["date-and-time", "internationalization"]
rust-version = "1.85"
exclude = ["target/**/*"]

[features]
default = []
serde = ["dep:serde"]
chrono = ["dep:chrono"]
timezone = ["chrono", "dep:chrono-tz"]
full = ["serde", "chrono", "timezone"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
chrono = { version = "0.4.39", optional = true, default-features = false, features = ["clock"] }
chrono-tz = { version = "0.10.0", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "format"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
