[package]
name = "parsitext"
description = "High-performance Persian (Farsi) text processing engine for Rust — normalization, tokenization, entity recognition."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/obsernetics/rust-lib"
documentation = "https://docs.rs/parsitext"
readme = "README.adoc"
keywords = ["persian", "farsi", "nlp", "text-processing", "normalization"]
categories = ["text-processing", "internationalization"]
rust-version = "1.86"
exclude = ["target/**/*"]

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
serde = ["dep:serde"]
jalali = ["dep:jalali-calendar"]
tantivy = ["dep:tantivy"]

[dependencies]
aho-corasick = "1.1"
regex = "1"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
jalali-calendar = { version = "0.1", path = "../jalali-calendar", optional = true }
tantivy = { version = "0.22", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1.0"

[[bench]]
name = "normalizer"
harness = false

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
